<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:visibility="visible"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_game_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="16dp"
            android:text="@string/test_message_time"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_team1_logo"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_gravity="left"
                android:src="@drawable/test_team1" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_team1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/test_team1_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_team1_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_team1_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/test_team1_score"
                    android:textSize="16sp" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="vs"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_team2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/test_team2_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_team2_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_team2_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/test_team2_score"
                    android:textSize="16sp" />
            </RelativeLayout>


            <ImageView
                android:id="@+id/iv_team2_logo"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_gravity="right"
                android:src="@drawable/test_team2" />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>