<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:visibility="visible"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="left"
            android:src="@drawable/test_user_avator" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_welcome"
            android:layout_toRightOf="@id/iv_user_avatar"
            android:paddingLeft="16dp"
            android:text="@string/test_user_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_message_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_name"
            android:layout_toRightOf="@id/iv_user_avatar"
            android:paddingLeft="16dp"
            android:text="@string/test_message_time"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_message_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_message_time"
            android:layout_toRightOf="@id/iv_user_avatar"
            android:paddingLeft="16dp"
            android:text="@string/test_message_content"
            android:textSize="16sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>