<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@android:color/transparent">

            <ImageView
                android:id="@+id/iv_news_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/test_pic"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/activity_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.29"
                android:orientation="vertical"
                android:weightSum="1">


                <android.support.v7.widget.CardView
                    android:id="@+id/main_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/button_logout"
                    android:layout_below="@+id/card_view"
                    android:layout_margin="9dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="5"
                    android:clickable="false"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="32dp"
                        android:columnCount="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_news_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/test_news_title"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_news_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/test_news_time"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:background="#EEEEEE" />

                        <TextView
                            android:id="@+id/tv_news_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/test_news_shortDescription"
                            android:textSize="15sp" />


                    </GridLayout>


                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tv_add_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="16dp"
                    android:text="@string/add_message"
                    android:textColor="@color/blue_900"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/detail_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:clipToPadding="false"
                    android:paddingBottom="48dp" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

