<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    app:ignore="NamespaceTypo">

    <com.edu.bjfu.cs2015.ibasketball.UI.FullScreenVideoView
        android:id="@+id/vv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/Logo"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="爱篮球"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:theme="@style/LightAutoCompleteTextView">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#FFFFFF" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/LightAutoCompleteTextView">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFFFFF" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/username_login_button"
                android:layout_width="140dp"
                android:layout_height="42dp"
                android:layout_marginRight="16dp"
                android:text="登录"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="2dp"
                fancy:fb_defaultColor="@color/transparent"
                fancy:fb_focusColor="#FFFFFF"
                fancy:fb_radius="30dp"
                fancy:fb_textColor="#FFFFFF" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/username_register_button"
                android:layout_width="140dp"
                android:layout_height="42dp"
                android:layout_marginLeft="16dp"
                android:text="注册 +"
                fancy:fb_borderColor="@color/colorAccent"
                fancy:fb_borderWidth="2dp"
                fancy:fb_defaultColor="@color/colorAccent"
                fancy:fb_focusColor="#FFFFFF"
                fancy:fb_radius="30dp"
                fancy:fb_textColor="#FFFFFF" />

        </GridLayout>

    </LinearLayout>
</RelativeLayout>